pref: pref code

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
+# screenshot timeout, unit: second
 SCREENSHOT_TIMEOUT=30000
-RESTART_HOUR=43200000
+
+# After every RESTART_HOUR hours, the system will check if it is possible to restart all instances. If there are tasks running at the moment when RESTART_HOUR hours have elapsed, the restart will be postponed until the tasks are completed before attempting to restart.
+RESTART_HOUR=12
+
+# Launch CHROMIUM_NUM Chromium instances simultaneously.
 CHROMIUM_NUM=1
+
+# The maximum number of tasks processed simultaneously, with the remaining tasks queued in a queue.
 CONCURRENCY=100
+
+# Maximum number of requests per minute from the same IP, exceeding which will be restricted.
 RATE_LIMIT=100
